[gd_scene load_steps=14 format=2]

[ext_resource path="res://Sprites/Player & Enemy/computer bot enemy.png" type="Texture" id=1]
[ext_resource path="res://Scene/RobotEnemy.gd" type="Script" id=2]
[ext_resource path="res://Audio/SFX/Damage(Enemy).wav" type="AudioStream" id=3]
[ext_resource path="res://Audio/SFX/Damage(Player).wav" type="AudioStream" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Angry"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Death"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 9, 10 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Hit"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 2 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Smile"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 14.0078, 16.0078 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 15.3322, 17.5159 )

[sub_resource type="CircleShape2D" id=8]
radius = 64.0

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 14.7862, 17.0023 )

[node name="RobotEnemy" type="KinematicBody2D" groups=[
"Enemy",
]]
collision_layer = 8
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 3
vframes = 4
frame = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Angry = SubResource( 1 )
anims/Death = SubResource( 2 )
anims/Hit = SubResource( 3 )
anims/Idle = SubResource( 4 )
anims/Smile = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 7 )

[node name="SmileArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SmileArea"]
shape = SubResource( 8 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 9 )

[node name="Damage" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -12.0

[node name="HitPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -12.0

[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="body_entered" from="SmileArea" to="." method="_on_SmileArea_body_entered"]
[connection signal="body_exited" from="SmileArea" to="." method="_on_SmileArea_body_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
